--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	
 	<nav>
 	  <ul>
-		<li><a href="#">Personagens</a></li>
+		<!-- <li><a href="#">Personagens</a></li> -->
+		<!-- <li><a href="#">Produtos</a></li> -->
 		<li><a href="#">Apoia-se</a></li>
 		<li><a href="#footer" class="icon solid fa-info-circle">Sobre</a></li>
 	  </ul>
